# jeevan

./: .env.example  .gitignore  Decoupler.agent.md  DecouplerPro.agent.md  Dockerfile  Makefile  QUICKSTART.md  README.md  ReconAndEvidenceCollector.agent.md  ReimplementationAndTestHarness.agent.md  conftest.py  pyproject.toml  requirements.txt  run_commands.txt  start_app.bat  test_boundary.py  test_network_api.py  validate.py
.conda-gdal/Scripts/: gdal2tiles-script.py  gdal2tiles.py  gdal2xyz-script.py  gdal2xyz.py  gdal_calc-script.py  gdal_calc.py  gdal_edit-script.py  gdal_edit.py  gdal_fillnodata-script.py  gdal_fillnodata.py  gdal_merge-script.py  gdal_merge.py  gdal_pansharpen-script.py  gdal_pansharpen.py  gdal_polygonize-script.py  gdal_polygonize.py  gdal_proximity-script.py  gdal_proximity.py  gdal_retile.py  (+18 more)
.venv312/: pyvenv.cfg
api/: __init__.py  app.py
db/: __init__.py  db.py  models.py
docs/: known_issues.md
infra/: docker-compose.example.yml
ingest/: __init__.py  run_ingest.py  sentinels_ingest.py
monitoring/: __init__.py  metrics.py  mlflow_helper.py
preproc/: __init__.py  aggregate_ndvi.py  cloudmask.py  compute_ndvi.py  compute_ndvi_cloudmask.py  detections.py  raster_confidence.py  run_preproc.py  sar.py  signals.py  texture.py
scripts/: __init__.py  dev_down.ps1  dev_up.ps1  e2e_smoke.py  test_agricultural_report.py
tests/: __init__.py  test_aggregate_ndvi.py  test_api.py  test_detections.py  test_indices.py  test_ingest_stub.py  test_models.py  test_sar.py  test_signals.py  test_texture.py
ui/: __init__.py  streamlit_app.py
(+850 files in other folders)
